--- a/Ludo-take/public/sass/layouts/gallery.scss
+++ b/Ludo-take/public/sass/layouts/gallery.scss
@@ -2,11 +2,12 @@
 	display: flex;
 	padding: 2px;
 	transition: .3s;
+	z-index: 0;
     
 	&:hover &__image {
 		filter: grayscale(1);
 		position: relative;
-        z-index: -1;
+        // z-index: -1;
         
 	}
 	
@@ -17,30 +18,32 @@
 	}
 	
 	&__link {
-		margin: 2px;
+		margin: 10px;
 		overflow: hidden;
 		
 		&:hover {
-
+			transform: scale(1.1);
+			transition: .3s;
+            // position: relative;
 
 			.gallery__image {
 				filter: grayscale(0);
 				position: relative;
-				z-index: -1;
+				// z-index: -1;
                 
 			}
 			
 			.gallery__caption {
 				opacity: 1;
 				position: relative;
-				z-index: -1;
+				// z-index: -1;
 			}
 		}
 	}
 	
 	&__thumb {
 		position: relative;
-		z-index: -1;
+		// z-index: -1;
 	}
 	
 	&__image {
@@ -49,9 +52,9 @@
 		transition: .3s;
 		
 		&:hover {
-			transform: scale(1.1);
+			// transform: scale(1.1);
             position: relative;
-            z-index: -1;
+            // z-index: -1;
 		}
 	}
 	
@@ -59,13 +62,14 @@
 		position: absolute;
 		bottom: 0;
 		left: 0;
-		padding: 25px 15px 15px;
+		padding: 10px 10px 10px;
 		width: 100%;
 		font-family: 'Raleway', sans-serif;
-		font-size: 16px;
+		font-size: 15px;
 		color: white;
 		opacity: 0;
 		background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255 ,255 , 0) 100%);
 		transition: .3s;
+		overflow-wrap: break-word;
 	}
 }
